--- a/sample-android/src/main/AndroidManifest.xml
+++ b/sample-android/src/main/AndroidManifest.xml
@@ -8,6 +8,11 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/Theme.Tracy">
+
+        <meta-data
+                android:name="firebase_performance_logcat_enabled"
+                android:value="true" />
+
         <activity
                 android:name=".MainActivity"
                 android:exported="true">
@@ -16,10 +21,6 @@
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
-
-            <meta-data
-                    android:name="android.app.lib_name"
-                    android:value=""/>
         </activity>
     </application>
 
