--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,6 +7,7 @@ fragment = "1.5.6"
 appcompat = "1.6.1"
 constraintLayout = "2.1.4"
 firebasePerformance = "20.3.1"
+lifecycleProcess = "2.6.1"
 
 pluginKotlin = "1.8.0"
 pluginAndroid = "7.3.0"
@@ -17,6 +18,7 @@ googleServices = "4.3.15"
 androidx-fragment = { module = "androidx.fragment:fragment", version.ref = "fragment" }
 androidx-appcompat = { module = "androidx.appcompat:appcompat", version.ref = "appcompat" }
 androidx-constraintLayout = { module = "androidx.constraintlayout:constraintlayout", version.ref = "constraintLayout" }
+androidx-lifecycle-process = { module = "androidx.lifecycle:lifecycle-process", version.ref = "lifecycleProcess" }
 
 firebase-performance = { module = "com.google.firebase:firebase-perf-ktx", version.ref = "firebasePerformance" }
 
