Integrate Kotest into the project

--- a/includedBuild/src/main/kotlin/tracy-android-convention.gradle
+++ b/includedBuild/src/main/kotlin/tracy-android-convention.gradle
@@ -19,4 +19,14 @@ android {
     kotlinOptions {
         jvmTarget = libs.versions.jvmTarget.get()
     }
+
+    testOptions {
+        unitTests.all {
+            it.useJUnitPlatform()
+        }
+    }
+}
+
+dependencies {
+    testImplementation libs.test.kotest
 }
