--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,6 +14,8 @@ pluginAndroid = "7.3.0"
 googleServices = "4.3.15"
 detekt = "1.23.0-RC1"
 
+kotest = "5.5.5"
+
 [libraries]
 androidx-fragment = { module = "androidx.fragment:fragment", version.ref = "fragment" }
 androidx-appcompat = { module = "androidx.appcompat:appcompat", version.ref = "appcompat" }
@@ -24,6 +26,8 @@ firebase-performance = { module = "com.google.firebase:firebase-perf-ktx", versi
 
 android-gradle-plugin = { module = "com.android.tools.build:gradle", version.ref="pluginAndroid" }
 kotlin-gradle-plugin = { module="org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref="pluginKotlin" }
+
+test-kotest = { module="io.kotest:kotest-runner-junit5", version.ref="kotest" }
 
 [plugins]
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "pluginKotlin" }
