--- a/includedBuild/src/main/kotlin/tracy-jvm-convention.gradle
+++ b/includedBuild/src/main/kotlin/tracy-jvm-convention.gradle
@@ -3,10 +3,14 @@ plugins {
     id("org.jetbrains.kotlin.jvm")
 }
 
-tasks.test {
+test {
     useJUnitPlatform()
 }
 
 kotlin {
     jvmToolchain(libs.versions.jvmTarget.get().toInteger())
+}
+
+dependencies {
+    testImplementation libs.test.kotest
 }
