--- a/sample-android/src/main/AndroidManifest.xml
+++ b/sample-android/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name="io.polyakov.tracy.sample.android.NotReallyMainActivity"/>
+        <activity android:name="io.polyakov.tracy.sample.android.fragment.SampleFragmentsActivity"/>
     </application>
 
 </manifest>
