Apply formatting rules for detekt

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -29,6 +29,8 @@ kotlin-gradle-plugin = { module="org.jetbrains.kotlin:kotlin-gradle-plugin", ver
 
 test-kotest = { module="io.kotest:kotest-runner-junit5", version.ref="kotest" }
 
+detekt-formatting = { module="io.gitlab.arturbosch.detekt:detekt-formatting", version.ref="detekt"}
+
 [plugins]
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "pluginKotlin" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "pluginKotlin" }
