--- a/includedBuild/src/main/kotlin/tracy-convention.gradle
+++ b/includedBuild/src/main/kotlin/tracy-convention.gradle
@@ -7,3 +7,7 @@ detekt {
     config = files("$rootDir/config/detekt/detekt.yml")
     buildUponDefaultConfig = true
 }
+
+dependencies {
+    detektPlugins(libs.detekt.formatting)
+}
