--- a/.github/workflows/pull-request-workflow.yml
+++ b/.github/workflows/pull-request-workflow.yml
@@ -12,22 +12,20 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: setup JDK 11
-        uses: actions/setup-java@3
+        uses: actions/setup-java@v3
         with:
           java-version: '11'
           distribution: 'zulu'
           cache: gradle
       - name: run detekt
-        uses: gradle/gradle-build-action@v2
+        uses: gradle/gradle-build-action@v2.4.2
         with:
           arguments: detekt
       - name: build
-        uses: gradle/gradle-build-action@v2
+        uses: gradle/gradle-build-action@v2.4.2
         with:
           arguments: assemble
       - name: run tests
-        uses: gradle/gradle-build-action@v2
+        uses: gradle/gradle-build-action@v2.4.2
         with:
           arguments: test
-
-
