Add fragment-related examples of traces to sample-android module

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,6 +8,8 @@ appcompat = "1.6.1"
 constraintLayout = "2.1.4"
 firebasePerformance = "20.3.1"
 lifecycleProcess = "2.6.1"
+splashScreen = "1.0.0-beta02"
+material = "1.5.0"
 
 pluginKotlin = "1.8.0"
 pluginAndroid = "7.3.0"
@@ -21,6 +23,9 @@ androidx-fragment = { module = "androidx.fragment:fragment", version.ref = "frag
 androidx-appcompat = { module = "androidx.appcompat:appcompat", version.ref = "appcompat" }
 androidx-constraintLayout = { module = "androidx.constraintlayout:constraintlayout", version.ref = "constraintLayout" }
 androidx-lifecycle-process = { module = "androidx.lifecycle:lifecycle-process", version.ref = "lifecycleProcess" }
+androidx-splash = { module = "androidx.core:core-splashscreen", version.ref = "splashScreen" }
+google-material = { module = "com.google.android.material:material", version.ref="material" }
+kotlin-reflect = { module = "org.jetbrains.kotlin:kotlin-reflect", version.ref="pluginKotlin" }
 
 firebase-performance = { module = "com.google.firebase:firebase-perf-ktx", version.ref = "firebasePerformance" }
 
