--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,6 @@
 android.enableJetifier=true
 android.useAndroidX=true
+
 kotlin.code.style=official
+
+org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m
