--- a/sample-android/src/main/AndroidManifest.xml
+++ b/sample-android/src/main/AndroidManifest.xml
@@ -15,7 +15,12 @@
                 android:value="true" />
 
         <activity
-                android:name=".MainActivity"
+                android:name=".main.MainActivity"
+                android:exported="true">
+        </activity>
+        <activity android:name="io.polyakov.tracy.sample.android.fragment.FragmentHostActivity"/>
+
+        <activity android:name="io.polyakov.tracy.sample.android.splash.SplashActivity"
                 android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -23,7 +28,6 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name="io.polyakov.tracy.sample.android.fragment.SampleFragmentsActivity"/>
     </application>
 
 </manifest>
