--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,6 +10,7 @@ firebasePerformance = "20.3.1"
 lifecycleProcess = "2.6.1"
 splashScreen = "1.0.0-beta02"
 material = "1.5.0"
+tracing = "1.1.0"
 
 pluginKotlin = "1.8.0"
 pluginAndroid = "7.3.0"
@@ -24,6 +25,7 @@ androidx-appcompat = { module = "androidx.appcompat:appcompat", version.ref = "a
 androidx-constraintLayout = { module = "androidx.constraintlayout:constraintlayout", version.ref = "constraintLayout" }
 androidx-lifecycle-process = { module = "androidx.lifecycle:lifecycle-process", version.ref = "lifecycleProcess" }
 androidx-splash = { module = "androidx.core:core-splashscreen", version.ref = "splashScreen" }
+androidx-tracing = { module = "androidx.tracing:tracing", version.ref = "tracing" }
 google-material = { module = "com.google.android.material:material", version.ref="material" }
 kotlin-reflect = { module = "org.jetbrains.kotlin:kotlin-reflect", version.ref="pluginKotlin" }
 
