Add Robolectric tests to test Activity checkpoints

--- a/includedBuild/src/main/kotlin/tracy-android-convention.gradle
+++ b/includedBuild/src/main/kotlin/tracy-android-convention.gradle
@@ -24,9 +24,6 @@ android {
         unitTests.all {
             it.useJUnitPlatform()
         }
+        unitTests.includeAndroidResources  = true
     }
-}
-
-dependencies {
-    testImplementation libs.test.kotest
 }
