--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,6 +18,9 @@ googleServices = "4.3.15"
 detekt = "1.23.0-RC1"
 
 kotest = "5.5.5"
+robolectric = "4.9"
+junit4 = "4.13.2"
+junitVintageEngine = "5.8.2"
 
 [libraries]
 androidx-fragment = { module = "androidx.fragment:fragment", version.ref = "fragment" }
@@ -34,9 +37,13 @@ firebase-performance = { module = "com.google.firebase:firebase-perf-ktx", versi
 android-gradle-plugin = { module = "com.android.tools.build:gradle", version.ref="pluginAndroid" }
 kotlin-gradle-plugin = { module="org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref="pluginKotlin" }
 
-test-kotest = { module="io.kotest:kotest-runner-junit5", version.ref="kotest" }
+test-kotest = { module = "io.kotest:kotest-runner-junit5", version.ref = "kotest" }
+test-robolectric = { module = "org.robolectric:robolectric", version.ref = "robolectric" }
+test-junit4 = { module = "junit:junit", version.ref = "junit4" }
+test-junit-vintage-engine = { module = "org.junit.vintage:junit-vintage-engine", version.ref = "junitVintageEngine" }
 
 detekt-formatting = { module="io.gitlab.arturbosch.detekt:detekt-formatting", version.ref="detekt"}
+androidx-uiautomator = { group = "androidx.test.uiautomator", name = "uiautomator", version = "2.2.0" }
 
 [plugins]
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "pluginKotlin" }
